<resources>
    <string name="app_name">QuizTask</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="conf_pasword_hint">Confirm Password</string>
    <string name="login_greating"> Log In </string>
    <string name="btn_log_in_label"> Log In!</string>
    <string name="registreation_text_view">You have no registration? Create account!</string>
    <string name="registration_greating"> Registation </string>
    <string name="btn_register_label">Register!</string>
    <string name="logout_btn_label">LogOut!</string>
    <string name="empty_name_field">Please fill the name field!</string>
    <string name="empty_userName_field">Please fill the UserName field!</string>
    <string name="used_userName">This user name is alredy taken!</string>
    <string name="empty_email">Please enter email address!</string>
    <string name="used_email">This email is alrady used!</string>
    <string name="empty_password">Please enter a password!</string>
    <string name="passwords_notMatches">The passwords not matches!</string>
    <string name="empty_confPassword">Please confirm the password!</string>
    <string name="invalide_email">Invalid email address!!!!</string>
    <string name="incorrct_logIn_fileds">Password and username don\'t matches.</string>
    <string name="return_to_game">Back!</string>
    <string name="correct_answer">Correct! The right answer is:\n </string>
    <string name="wrong_answer">Sorry, you are wrong! The right answer is: </string>
    <string name="congratulations_label">Congratulations!!</string>
    <string name="restart_game_button_label">Restart</string>
    <string name="go_to_profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="multi_mode_label"> Multiple choice mode</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="is_it_true_label">Is It True?</string>

</resources>
