<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_greating"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        />


    <TextView
        android:id="@+id/incorrectUserNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/incorrectPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>


    <EditText
        android:id="@+id/passLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in_label"
            android:layout_marginTop="20dp"

            />

        <TextView
            android:id="@+id/registrationLink_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registreation_text_view"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>


</LinearLayout>
